--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   agora_rtc_engine: ^6.1.0
   permission_handler: ^10.2.0
+  agora_rtm: ^1.5.0
 
 dev_dependencies:
   flutter_test:
